# claude-vault-capture

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  SPEC.md  install.sh  pyproject.toml  release-please-config.json
.github/: SPEC-claude-docs-refactor.md  SPEC.md  dependabot.yml
.github/workflows/: ci.yml  release-please.yml  zizmor.yml
dev-notes/: README.md
dev-notes/tasks/: review.md  todo.md
docs_claude/: e2e-tests-plan.md
eval/: run-fixtures.sh  run-install-smoke.sh
eval/experiments/: FINDINGS-enrichment.md  FINDINGS.md  bonly_replay.py  build_bonly_corpus.py  candidate-curation-prompt-v2.md  candidate-curation-prompt-v3.md  candidate-curation-prompt.md  enrichment_quality_ab.py  tool_enrichment_cost.py
hooks/: curate.py  scrub.py  scrub_rules.py  session-end-capture.sh
prompts/: curation-system-prompt.md  raw-baseline-prompt.md
skill-patches/: daily-devlog.step-9.5.md  global-claude-md.vault-save-trigger.md  vault-save.md  weekly-recap.step-5.5.md  weekly-recap.step-8.md
tasks/: plan.md
tests/: conftest.py  test_append_log.py  test_dedup.py  test_excluded_commands.py  test_failure_isolation.py  test_frontmatter.py  test_guards.py  test_json_salvage.py  test_live_e2e.py  test_load_transcript.py  test_log_schema.py  test_pipeline_e2e.py  test_render_transcript.py  test_scrub.py  test_session_end_hook.py  test_strip_fences.py  test_threshold.py  test_timeout.py
