[project]
name = "claude-vault-capture"
version = "0.2.0"
description = "Automatic Claude Code session capture into an Obsidian vault on SessionEnd."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Loïc Houpert" }]
keywords = ["claude-code", "obsidian", "hooks", "knowledge-capture"]

# Runtime dependency for the default (metered API-key) mode. Pinned to the tested
# version; Dependabot (.github/dependabot.yml) proposes bumps.
dependencies = [
    "anthropic==0.105.2",
]

[project.optional-dependencies]
# Route model calls through a Claude Max subscription instead of a metered key.
# See README → "Using your Claude Max subscription instead of an API key".
subscription = ["claude-agent-sdk==0.2.89"]

# Dev/test deps live in a dependency group (PEP 735), which `uv sync` installs by
# default — so `uv run pytest` works out of the box. PyYAML is test-only: the
# runtime parses frontmatter with stdlib regex and never imports yaml. Use
# `uv sync --no-dev` for a lean, hook-only install (only `anthropic`).
[dependency-groups]
dev = ["pytest==9.0.3", "pyyaml==6.0.3", "ruff==0.15.16", "pre-commit==4.6.0"]

[project.urls]
Repository = "https://github.com/lhoupert/claude-vault-capture"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
# Default rules (E, F) plus W605: catch invalid string-escape sequences, which
# become SyntaxErrors in future Python and silently break regex patterns.
extend-select = ["W605"]

[tool.ruff.lint.per-file-ignores]
# Tests insert hooks/ into sys.path before importing the modules under test,
# so module-level imports legitimately follow that statement.
"tests/**" = ["E402"]
